# GENERATIVE-COLLAPSE-DYNAMICS

./: .commit_msg.txt  .gitignore  AGENTS.md  ARCHITECTURE.md  AXIOM.md  CATALOGUE.md  CHANGELOG.md  CLAUDE.md  CLINICAL_NEUROSCIENCE_ASSESSMENT.md  CONTRIBUTING.md  CROSS_DOMAIN_REALIZATIONS.md  ENHANCEMENT_AUDIT.md  KERNEL_SPECIFICATION.md  MANIFEST.in  QUICKSTART_TUTORIAL.md  README.md  README_PYPI.md  THE_FIRST_PASS.md  TIER_SYSTEM.md  fix_test.py  pyproject.toml  pyrightconfig.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md  dependabot.yml
Generative Collapse Dynamics (GCD/: UMCP) paper
canon/: ct_anchors.yaml  kin_anchors.yaml  matl_anchors.yaml  sec_anchors.yaml  st_anchors.yaml
casepacks/: JACKSON_MATHEMATICAL_REFERENCE.md  JACKSON_TIER2_DIAGNOSTIC.md
closures/: __init__.py  registry.yaml
conda.recipe/: conda_build_config.yaml  meta.yaml
contracts/: KIN.INTSTACK.v1.yaml  ST.INTSTACK.v1.yaml
derived/: domain_maturity.json  theorem_registry.json  trace_meta.yaml
docs/: RESPONSES_TO_CRITICS.md  SYMBOL_INDEX.md  jackson_response_ricp_v2_extended.md
freeze/: baseline_invariants.json  bounds.json  closures_registry.yaml.sha256  embedding.yaml.sha256  freeze_manifest.json  observables.yaml.sha256  return.yaml.sha256  return_params.json  weights.csv.sha256
images/: scale_ladder_diagram.html
integrity/: code_version.txt  sha256.txt
ledger/: return_log.csv
outputs/: report.txt
paper/: .zenodo.json  Bibliography.bib  INDEX.md  OPOLY26_INTERCONNECTION_ANALYSIS.md  awareness_cognition_kernel.tex  confinement_kernel.tex  consciousness_coherence.tex  corpus_structure.tex  gcd_whitepaper.tex  measurement_substrate.tex  prx_submission.tex  (+6 more)
src/umcp_c/: CMakeLists.txt  README.md
src/umcp_c/include/umcp_c/: contract.h  kernel.h  ledger.h  pipeline.h  regime.h  seam.h  sha256.h  trace.h  types.h
src/umcp_c/src/: contract.c  kernel.c  ledger.c  pipeline.c  regime.c  seam.c  sha256.c  trace.c
src/umcp_c/tests/: test_kernel_c.c  test_orchestration.c
(+281 files in other folders)
